exports[`test renders ./components/layout/demo/custom-trigger.md correctly 1`] = `
<div
  class="ant-layout-demo-custom ant-layout">
  <div
    class="ant-layout-sider"
    style="flex:0 0 200px;">
    <div
      class="logo" />
    <ul
      aria-activedescendant=""
      class="ant-menu ant-menu-inline  ant-menu-dark ant-menu-root"
      role="menu"
      tabindex="0">
      <li
        aria-selected="true"
        class="ant-menu-item-selected ant-menu-item"
        role="menuitem"
        style="padding-left:24px;">
        <i
          class="anticon anticon-user" />
        <span
          class="nav-text">
          nav 1
        </span>
      </li>
      <li
        aria-selected="false"
        class="ant-menu-item"
        role="menuitem"
        style="padding-left:24px;">
        <i
          class="anticon anticon-video-camera" />
        <span
          class="nav-text">
          nav 2
        </span>
      </li>
      <li
        aria-selected="false"
        class="ant-menu-item"
        role="menuitem"
        style="padding-left:24px;">
        <i
          class="anticon anticon-upload" />
        <span
          class="nav-text">
          nav 3
        </span>
      </li>
    </ul>
  </div>
  <div
    class="ant-layout">
    <div
      class="ant-layout-header">
      <div
        class="nav">
        <i
          class="anticon anticon-menu-fold trigger" />
      </div>
    </div>
    <div
      class="content ant-layout-content">
      content
    </div>
  </div>
</div>
`;

exports[`test renders ./components/layout/demo/demo.md correctly 1`] = `
<div
  class="ant-layout"
  style="color:#fff;background-color:#ededed;background-size:50px 50px;background-image:linear-gradient(45deg, rgba(255, 255, 255, .7) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .7) 50%, rgba(255, 255, 255, .7) 75%, transparent 75%, transparent);">
  <div
    class="ant-layout-header"
    style="color:#fff;background:rgba(16, 142, 233, 0.5);">
    Header
  </div>
  <div
    class="ant-layout"
    style="color:#fff;background-color:#ededed;background-size:50px 50px;background-image:linear-gradient(-45deg, rgba(255, 255, 255, .7) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .7) 50%, rgba(255, 255, 255, .7) 75%, transparent 75%, transparent);">
    <div
      class="ant-layout-sider"
      style="color:#fff;background:rgba(16, 142, 233, 0.9);flex:0 0 200px;">
      Sider
    </div>
    <div
      class="ant-layout-content"
      style="color:#fff;background:rgba(16, 142, 233, 0.7);">
      Content
    </div>
  </div>
  <div
    class="ant-layout-footer"
    style="color:#fff;background:rgba(16, 142, 233, 0.5);">
    Footer
  </div>
</div>
`;

exports[`test renders ./components/layout/demo/side.md correctly 1`] = `
<div
  class="ant-layout-demo-side ant-layout">
  <div
    class="ant-layout-sider"
    style="flex:0 0 200px;">
    <div
      class="logo" />
    <ul
      aria-activedescendant=""
      class="ant-menu ant-menu-inline  ant-menu-dark ant-menu-root"
      role="menu"
      tabindex="0">
      <li
        aria-selected="true"
        class="ant-menu-item-selected ant-menu-item"
        role="menuitem"
        style="padding-left:24px;">
        <i
          class="anticon anticon-user" />
        <span
          class="nav-text">
          nav 1
        </span>
      </li>
      <li
        aria-selected="false"
        class="ant-menu-item"
        role="menuitem"
        style="padding-left:24px;">
        <i
          class="anticon anticon-video-camera" />
        <span
          class="nav-text">
          nav 2
        </span>
      </li>
      <li
        aria-selected="false"
        class="ant-menu-item"
        role="menuitem"
        style="padding-left:24px;">
        <i
          class="anticon anticon-upload" />
        <span
          class="nav-text">
          nav 3
        </span>
      </li>
      <li
        aria-selected="false"
        class="ant-menu-item"
        role="menuitem"
        style="padding-left:24px;">
        <i
          class="anticon anticon-user" />
        <span
          class="nav-text">
          nav 4
        </span>
      </li>
      <li
        aria-selected="false"
        class="ant-menu-item"
        role="menuitem"
        style="padding-left:24px;">
        <i
          class="anticon anticon-heart-o" />
        <span
          class="nav-text">
          nav 5
        </span>
      </li>
      <li
        aria-selected="false"
        class="ant-menu-item"
        role="menuitem"
        style="padding-left:24px;">
        <i
          class="anticon anticon-team" />
        <span
          class="nav-text">
          nav 6
        </span>
      </li>
    </ul>
    <div
      class="ant-layout-sider-trigger">
      <i
        class="anticon anticon-left" />
    </div>
  </div>
  <div
    class="ant-layout">
    <div
      class="ant-layout-header">
      <div
        class="nav" />
    </div>
    <div
      class="main ant-layout-content">
      <div
        class="breadcrumb">
        <div
          class="ant-breadcrumb">
          <span>
            <span
              class="ant-breadcrumb-link">
              Home
            </span>
            <span
              class="ant-breadcrumb-separator">
              /
            </span>
          </span>
          <span>
            <span
              class="ant-breadcrumb-link">
              List
            </span>
            <span
              class="ant-breadcrumb-separator">
              /
            </span>
          </span>
          <span>
            <span
              class="ant-breadcrumb-link">
              App
            </span>
            <span
              class="ant-breadcrumb-separator">
              /
            </span>
          </span>
        </div>
      </div>
      <div>
        content
      </div>
    </div>
    <div
      class="footer ant-layout-footer">
      Ant Design ©2016 Created by Ant UED
    </div>
  </div>
</div>
`;

exports[`test renders ./components/layout/demo/top.md correctly 1`] = `
<div
  class="ant-layout-demo-top ant-layout">
  <div
    class="ant-layout-header">
    <div
      class="logo" />
    <ul
      aria-activedescendant=""
      class="ant-menu ant-menu-horizontal  ant-menu-dark ant-menu-root"
      role="menu"
      style="line-height:64px;"
      tabindex="0">
      <li
        aria-selected="false"
        class="ant-menu-item"
        role="menuitem">
        nav 1
      </li>
      <li
        aria-selected="true"
        class="ant-menu-item-selected ant-menu-item"
        role="menuitem">
        nav 2
      </li>
      <li
        aria-selected="false"
        class="ant-menu-item"
        role="menuitem">
        nav 3
      </li>
    </ul>
  </div>
  <div
    class="ant-layout-content">
    <div
      class="breadcrumb">
      <div
        class="ant-breadcrumb">
        <span>
          <span
            class="ant-breadcrumb-link">
            Home
          </span>
          <span
            class="ant-breadcrumb-separator">
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link">
            List
          </span>
          <span
            class="ant-breadcrumb-separator">
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link">
            App
          </span>
          <span
            class="ant-breadcrumb-separator">
            /
          </span>
        </span>
      </div>
    </div>
    <div
      class="content">
      content
    </div>
  </div>
  <div
    class="footer ant-layout-footer">
    Ant Design ©2016 Created by Ant UED
  </div>
</div>
`;

exports[`test renders ./components/layout/demo/top-side.md correctly 1`] = `
<div
  class="ant-layout-demo-topside ant-layout">
  <div
    class="header ant-layout-header">
    <div>
      <div
        class="logo" />
      <ul
        aria-activedescendant=""
        class="ant-menu ant-menu-horizontal  ant-menu-dark ant-menu-root"
        role="menu"
        style="line-height:64px;"
        tabindex="0">
        <li
          aria-selected="false"
          class="ant-menu-item"
          role="menuitem">
          nav 1
        </li>
        <li
          aria-selected="true"
          class="ant-menu-item-selected ant-menu-item"
          role="menuitem">
          nav 2
        </li>
        <li
          aria-selected="false"
          class="ant-menu-item"
          role="menuitem">
          nav 3
        </li>
      </ul>
    </div>
    <div
      class="breadcrumb">
      <div
        class="ant-breadcrumb">
        <span>
          <span
            class="ant-breadcrumb-link">
            Home
          </span>
          <span
            class="ant-breadcrumb-separator">
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link">
            List
          </span>
          <span
            class="ant-breadcrumb-separator">
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link">
            App
          </span>
          <span
            class="ant-breadcrumb-separator">
            /
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="main ant-layout">
    <div
      class="sider ant-layout-sider"
      style="flex:0 0 200pxpx;">
      <ul
        aria-activedescendant=""
        class="ant-menu ant-menu-inline  ant-menu-light ant-menu-root"
        role="menu"
        tabindex="0">
        <li
          class="ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-selected ant-menu-submenu">
          <div
            aria-expanded="true"
            aria-haspopup="true"
            aria-owns="sub1$Menu"
            class="ant-menu-submenu-title"
            style="padding-left:24px;">
            <span>
              <i
                class="anticon anticon-user" />
              subnav 1
            </span>
          </div>
          <ul
            aria-activedescendant=""
            class="ant-menu ant-menu-inline  ant-menu-sub"
            id="sub1$Menu"
            role="menu">
            <li
              aria-selected="true"
              class="ant-menu-item-selected ant-menu-item"
              role="menuitem"
              style="padding-left:48px;">
              option1
            </li>
            <li
              aria-selected="false"
              class="ant-menu-item"
              role="menuitem"
              style="padding-left:48px;">
              option2
            </li>
            <li
              aria-selected="false"
              class="ant-menu-item"
              role="menuitem"
              style="padding-left:48px;">
              option3
            </li>
            <li
              aria-selected="false"
              class="ant-menu-item"
              role="menuitem"
              style="padding-left:48px;">
              option4
            </li>
          </ul>
        </li>
        <li
          class="ant-menu-submenu-inline ant-menu-submenu">
          <div
            aria-expanded="false"
            aria-haspopup="true"
            aria-owns="sub2$Menu"
            class="ant-menu-submenu-title"
            style="padding-left:24px;">
            <span>
              <i
                class="anticon anticon-laptop" />
              subnav 2
            </span>
          </div>
        </li>
        <li
          class="ant-menu-submenu-inline ant-menu-submenu">
          <div
            aria-expanded="false"
            aria-haspopup="true"
            aria-owns="sub3$Menu"
            class="ant-menu-submenu-title"
            style="padding-left:24px;">
            <span>
              <i
                class="anticon anticon-notification" />
              subnav 3
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      class="ant-layout-content">
      content
    </div>
  </div>
  <div
    class="footer ant-layout-footer">
    Ant Design ©2016 Created by Ant UED
  </div>
</div>
`;
